<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="11">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <include
            android:id="@+id/SCREEN_HEADER"
            layout="@layout/titlebar" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/modify_programs_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-1dp"
        android:layout_weight="9.2">

        <LinearLayout
            android:id="@+id/child_of_scroll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/wrapper_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/ll2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_customername"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:singleLine="false"
                        android:text="Amazon"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_contract"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:singleLine="false"
                        android:text="Billable Service"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_reported_on"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:singleLine="true"
                        android:text="reported on 13/12/2015, 10:00AM"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                    <!-- <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" /> -->

                    <LinearLayout
                        android:id="@+id/listr_text_wrapper2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight=".2"
                            android:singleLine="true"
                            android:text="@string/status"
                            android:textColor="@color/iSteerColor1"
                            android:textSize="14sp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/tv_service_status"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="0dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="0.3"
                            android:alpha="0.7"
                            android:paddingLeft="10dp"
                            android:singleLine="false"
                            android:text="Pending"
                            android:textColor="@color/dark_red"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/ll_locate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_margin="5dp"
                                android:background="@color/white"
                                android:src="@drawable/marker_icon_2"
                                android:tint="@color/colorPrimary" />

                            <TextView
                                android:id="@+id/tv_locate"
                                android:layout_width="0dp"
                                android:layout_height="30dp"
                                android:layout_gravity="right|center_vertical"
                                android:layout_marginRight="10dp"
                                android:layout_weight="0.3"
                                android:clickable="true"
                                android:focusable="true"
                                android:gravity="center"
                                android:background="@drawable/round_primary_primary"
                                android:singleLine="true"
                                android:text="Locate"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:text="@string/issue"
                    android:textColor="@color/iSteerColor1"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_issue"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0.5dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:enabled="false"
                    android:gravity="left|center_vertical"
                    android:inputType="textMultiLine"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="false"
                    android:textColor="@color/Black" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:text="@string/description"
                    android:textColor="@color/iSteerColor1"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0.5dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:enabled="false"
                    android:gravity="left|center_vertical"
                    android:inputType="textMultiLine"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="false"
                    android:textColor="@color/Black" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:text="@string/site_address"
                    android:textColor="@color/iSteerColor1"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_site_address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0.5dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:enabled="false"
                    android:gravity="left|center_vertical"
                    android:inputType="textMultiLine"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="false"
                    android:textColor="@color/Black" />

                <TextView
                    android:id="@+id/btnLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:text="@string/phone"
                    android:textAllCaps="false"
                    android:textColor="@color/iSteerColor1"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0.5dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:enabled="false"
                    android:gravity="left|center_vertical"
                    android:inputType="textMultiLine"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="false"
                    android:textColor="@color/Black" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight=".8">

        <Button
            android:id="@+id/btnAddWorkLog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/round_primary_primary"
            android:gravity="center"
            android:text="Add Work Log"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnViewWorkLogs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/round_primary_primary"
            android:gravity="center"
            android:text="View Work Logs"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>